# annotate-transformer

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  frozen-requirements.txt  pyproject.toml  requirements.txt  setup.py
annotate-transformer/: README.md
annotate_transformer/: autovisualize.py  sympy.py  visualize.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Attribution-GPT2.ipynb  Attribution.ipynb  Ecco.ipynb  Interpreting Transformer Layers.ipynb  Layer Attribution-gptneo.ipynb  Logit Lens.ipynb  Look At Position Vectors.ipynb  ShowEmbeddingSpace.md  Transformer Structure.ipynb
notebooks/Transformer Circuits/: pythia70 - recalculate attention.ipynb
notebooks/captum-attribution/: Layer Attribution-GPT2.ipynb  Layer Attribution-gptneo.ipynb
notebooks/ecco/: Ecco-Copy1.ipynb
notebooks/logit-lens/: Back to Basics gptneo125.ipynb  Back to Basics.ipynb
notebooks/naming/: describe-a-word.ipynb  readme.md  starplot.ipynb  tensor-sizes.ipynb
notebooks/transformer-lens/: Annotate.ipynb  braket.ipynb  embed-unembed.ipynb  transformer-lens pythia70.ipynb  transformer-lens pythia75.ipynb  transformer-lens.ipynb  transformer_lens_colab.ipynb
notebooks/tuned-lens/: readme.md
src/visualization/: braket.py  visualize.py
