[tool.poetry]
name = "annotate-transformer"
version = "0.2.0"
description = "Analyse and annotate the internal representations of natural language text processed through a generative transformer model."
authors = ["Stephen Prior"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "annotate_transformer"}]

[tool.poetry.dependencies]
python = ">=3.7.4"
sympy = "^1.12"
transformer-lens = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
